--- a/cricket/cricket.css
+++ b/cricket/cricket.css
@@ -57,7 +57,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
-    height: 80vh;
+    height: 70vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -72,12 +72,14 @@
     font-size: 100px;
     color: white;
     margin: 10px 10px;
+    text-shadow: 10px 10px 12px black;
+    /* -webkit-text-stroke: 2px black; */
     
 }
 .banner p.secondary{
     font-size: 2.5rem;
     color: black;
-
+    
 }
 
 .middle{
@@ -90,6 +92,8 @@
     font-size: 2rem;
     text-align: center;
     /* border: 2px solid black; */
+    -webkit-text-stroke: .5px grey;
+    /* text-shadow: 5px 5px 5px grey; */
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
     margin: 10px 10px;
@@ -167,15 +171,39 @@
     color: white;
     margin: 5px 5px;
     font-size: 2.5rem;
+    font-family: 'Cormorant Garamond', serif;
+    -webkit-text-stroke: .5px black;
+    text-shadow: 0px 0px 10px black;
+    font-weight: bold;
     
 }
 
 .feature p{
-    color: whitesmoke;
+    color: white;
     margin: 5px 5px;
     font-size: 1.5rem;
+    font-family:'Cormorant Garamond', serif;
+    text-shadow: 0px 0px 5px white;
 }
 
 .feature a{
     text-decoration: none;
 }
+
+.feature div.div-1:hover{
+    box-shadow: 0px 0px 30px black;
+    /* mask-border-outset: 1px solid grey; */
+}
+.feature div.div-2:hover{
+    box-shadow: 0px 0px 30px black;
+}
+.feature div.div-3:hover{
+    box-shadow: 0px 0px 30px black;
+}
+.feature div.div-4:hover{
+    box-shadow: 0px 0px 30px black;
+}
+.feature div.div-5:hover{
+    box-shadow: 0px 0px 30px black;
+}
+
