--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
 *{padding: 0; margin:0;box-sizing: border-box;font-family: arial;}
         
+body{
+  background-color: lightgrey;
+}
 
         .mySlides {display: none; }
         img {vertical-align: middle;}
@@ -11,16 +14,54 @@
           margin: auto;
           padding-top: 20px;
         }
+        .cover{
+          background-image: url(./images/sports.jpg);
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+          height: 85vh;
+          width: 100vw;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+        }
 
+        .cover p.first{
+          font-size: 100px;
+          text-shadow: 5px 5px 5px darkgrey;
+        }
+        .cover p.second{
+          font-size: 50px;
+          text-shadow: 5px 5px 5px darkgrey;
+        }
+
+        .note{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 25vh;
+          width: 100vw;
+        }
+        .note p{
+          font-size: 35px;
+          text-align: center;
+          font-family: 'Noto Serif', serif;
+        }
+
+        
         /* Caption text */
         .text {
           color: #f2f2f2;
-          font-size: 15px;
+          font-size: 80px;
+          font-family: 'Playfair Display', serif;
           padding: 8px 12px;
           position: absolute;
           bottom: 8px;
           width: 100%;
           text-align: center;
+          -webkit-text-stroke: .75px black;
+    text-shadow: 0px 0px 10px black;
         }
 
         /* Number text (1/3 etc) */
@@ -130,20 +171,37 @@
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content:space-evenly;
         
         }
+        #team div.circle{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+        }
         .circle img{
-            border: 3px solid blue;
-            width: 200px;
+            border: 3px solid grey;
+            width: 250px;
             height: 250px;
-            border-radius: 40%;
+            border-radius: 100px;
             display: inline-block;
             display: flex;
             flex-direction: row;
-            margin: 50px 50px 100px 70px;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            /* margin: 50px 50px 100px 70px; */
             -webkit-border-radius: 40%;
             -moz-border-radius: 40%;
             -ms-border-radius: 40%;
             -o-border-radius: 40%;
+}
+
+#team div.circle p.names1{
+  font-weight: bold;
+  
+}
+#team div.circle p{
+  font-family: 'Noto Serif', serif;
+  
 }
